address feedback from Zam

--- a/content/10.tac.md
+++ b/content/10.tac.md
@@ -28,8 +28,8 @@
 
 #### Timeline
 
-**Chapter 1**: written by April 2021.  
-**Chapters 2 & 3**: written by March 2021.  
+**Chapter 1**: written by April/May 2021.  
+**Chapters 2 & 3**: written by April/May 2021.  
 **Chapter 4**: Begin work in February/March 2021 and will likely require 6 months of
 work to get it to a stage where I can write a chapter about it. Unlikely to reach
 publication stage within my PhD.
@@ -37,4 +37,4 @@ publication stage within my PhD.
 ---
 
 Taking the progress and timelines outlined above into account, I would like to ask for a
-6-month extension from 3.5 to 4 years.
+6-month extension from 3.5 (11/04/2021) to 4 years.
