--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -119,9 +119,7 @@ As mentioned in [Motivation and Background](#motivation-and-background), `pandor
 method developed by a previous PhD student in the lab, Rachel Colquhoun. It works on the
 premise of approximating a genome as a hierarchical mosaic. At a high-level, it
 represents a mosaic of loci - usually genes and intergenic regions - while at the
-locus-level, it is a mosaic of previously-seen genomes.
-
-`pandora` aims to infer a consensus sequence from a PRG for a single sample or a
+locus-level, it is a mosaic of previously-seen genomes. `pandora` aims to infer a consensus sequence from a PRG for a single sample or a
 collection of samples. In the case of a collection of samples, the consensus sequence
 will be one that best fits the collection of samples. `pandora` can additionally perform
 genotyping of the sample(s) with respect to this inferred consensus and produces a
@@ -132,7 +130,7 @@ While `pandora`, before the work in this chapter, allows comparison of genomes t
 level of detail provided by no other tool, there is still a significant shortcoming: it
 cannot discover novel variation. If a sample contains a variant not present in the PRG,
 the best `pandora` can do is select the path that is closest to that variant. The work
-in this chapter outlines a method for removing this limitation and provides an analysis
+in this chapter outlines a method I have developed for removing this limitation and provides an analysis
 of the gain in recall and precision by incorporating *de novo* variant discovery.
 
 #### Local *de novo* variant discovery in a genome graph
@@ -216,7 +214,7 @@ with these truth variants.
 
 Figure {@fig:basecall_model} shows, for a subset of four samples, two important results
 regarding the effect of (unfiltered) *de novo* variant discovery in `pandora`. Firstly,
-is shows that the choice of the Nanopore basecalling model has a sizeable impact - at
+it shows that **the choice of the Nanopore basecalling model has a sizeable impact** - at
 least for *E. coli*. When using a methylation-aware model (not default), there is a
 significant increase in recall and decrease in error rate. While this has been
 previously described for Enterobacteriaceae [@doi:10.1186/s13059-019-1727-y], it
@@ -248,13 +246,13 @@ samples, `pandora` has recall at least inline with other variant callers for bot
 Nanopore and Illumina reads. However, when the number of shared samples is less than 6
 (30%), `pandora`'s recall is significantly greater for both sequencing technologies.
 
-![Variant caller recall across the pan-genome. The Y-axis shows the number of variants found. The X-axis shows, for each locus, how many samples is it found in (i.e. left is more "accessory" and right is more "core"). The panels split the results by Illumina (left) and Nanopore (right) data and variant callers. The boxes represent using different reference genomes from across the phylogenetic tree to call variants (for non-`pandor` callers).](images/recall.png){#fig:recall}
+![Variant caller recall across the pan-genome. The Y-axis shows the number of variants found. The X-axis shows, for each locus, how many samples is it found in (i.e. left is more "accessory" and right is more "core"). The panels split the results by Illumina (left) and Nanopore (right) data and variant callers. The boxes represent using different reference genomes from across the phylogenetic tree to call variants (for non-`pandora` callers).](images/recall.png){#fig:recall}
 
 We then show in Figure {@fig:precision} that the variants called by `pandora` have
 significantly higher precision than `nanopolish` and `medaka` for Nanopore data and
 `samtools` for Illumina. `snippy` (Illumina) does have a superior precision to `pandora`
-though. One other important point is that, aside from `snippy` all other variant
-caller's precision varies quite a lot depending on the choice of reference genome.
+though. One other important point is that, aside from `snippy`, all other variant
+caller's precision varies quite a lot depending on the choice of reference genome. Having said that, `snippy`'s precision *does* vary depending on the referece; it just does so on a different scale to the other callers.
 `pandora`, on the other hand, maintains consistent precision regardless of the
 phylogroup of a sample.
 
@@ -315,9 +313,7 @@ is necessary as they will have arrived at a different rate to the putative molec
 clock and will artefactually extend branch lengths on the phylogenetic tree
 [@doi:10/d9r7; @doi:10/f8gsk2]. In the case of Mtb, however, there is virtually no
 recombination [@doi:10/fhqqkv; @doi:10/ftp6r2; @doi:10/f4mrqv], so this step in not
-required.
-
-For this chapter, we define genetic distance to be the sum of genetic discordances,
+required. For this chapter, we define genetic distance to be the sum of genetic discordances,
 where missing data and heterozygosity do not cause discordance and study the clustering
 this definition generates.
 
@@ -326,37 +322,10 @@ this definition generates.
 Each sample was sequenced on both Nanopore and Illumina platforms from the same isolate
 and DNA extraction. In total, we received 118 samples from Madagascar, 83 from South
 Africa, and 46 from the National Tuberculosis Reference Lab in Birmingham; giving us a
-total of 247 samples. As these samples are not reference isolates, we need to be able to
+total of 247 samples - 150 of which passed quality control. As these samples are not reference isolates, we need to be able to
 compare both Illumina and Nanopore to a truth. To establish how each platform compares
-to the truth, we have additionally sequenced 35 of the Malagasy isolates with PacBio and
+to the truth, we have additionally sequenced 35 of the Malagasy isolates with PacBio - only 7 made it through quality control - and
 will use the high-quality assemblies for validation of variant calls.
-
-#### Quality Control
-
-The first step in quality control (QC) was to exclude samples where the Nanopore and
-Illumina data were not perfectly matched. In total, we excluded 40 samples at this
-stage.
-
-The remaining 207 samples were processed through a QC pipeline. The first step in the
-pipeline is decontamination of sequencing reads. We used the decontamination database
-from `clockwork` (<https://github.com/iqbal-lab-org/clockwork>), which contains a wide
-range of organisms, including viral, human, Mtb, non-tuberculosis Mycobacterium (NTM),
-and nasopharyngeal-associated bacterial genomes. Reads were mapped to the database and
-was output to a final decontaminated fastq file if it had any mapping to a
-non-contaminant genome. All decontaminated fastq files were subsampled to a depth of 60x
-(Illumina) and 150x (Nanopore) using `rasusa` [@doi:10/d9rz].
-
-The last step in the QC pipeline is to assign lineages for each sample. A panel of
-lineage-defining SNPs [@doi:10/gbvbxh; @doi:10/d9r2; @doi:10/f9dg9j] was used in
-conjunction with a sample's Illumina VCF from the
-[Baseline variant analysis](#baseline-variant-analysis) for the lineage assignment.
-
-We exclude samples from further analysis if they had coverage below 20x (Illumina) or
-30x (Nanopore), or if they could not be assigned a single lineage. This filtering
-criteria led to a further 57 samples being excluded; leaving us with a total of 150
-samples to use for the remainder of this work. In addition to the QC of the
-Illumina/Nanopore data, we sadly had to exclude 26/35 PacBio sequencing datasets due to
-mismatched Illumina/Nanopore data or PacBio coverage lower than 20x.
 
 #### Baseline variant analysis
 
@@ -402,7 +371,7 @@ the order of tens-of-SNPs [@doi:10/d9r7] so it makes more sense to look at the d
 relationship for samples that are closer to each other. In Figure {@fig:close_dotplot},
 we limit to samples within an Illumina SNP distance of 100. It shows that, at this
 scale, the relationship between Illumina- and Nanopore-defined SNP distance is much
-closer. The correlation between the two can be quantified by the linear equation
+closer. The best fit for the data can be described by the linear equation
 $y=0.93x+0.84$, where $y$ is the predicted Nanopore distance between two samples, given
 the Illumina distance $x$. We can use this equation as a way of translating transmission
 cluster SNP thresholds for Illumina data to Nanopore. For instance, if clusters are
@@ -461,29 +430,6 @@ between `pandora` and the truth that agree. Additionally, we will investigate ho
 complexity of the PRG effects the call rates and what the cost in computational
 performance is.
 
-#### Multi-sample comparison
-
-Multi-sample comparison suffers from two main challenges. First, large chunks of DNA may
-be present or absent across samples - this is the pan-genome effect. This effect causes
-significant issues with single-reference approaches, as outlined previously, but
-`pandora` was developed to address this. Second, when comparing a set of samples, the
-choice of reference affects how one describes variants. `pandora`, by design, chooses a
-reference for each loci PRG based on the current dataset, intending to maximise the
-succinctness of variant descriptions (see Figure {@fig:refbias}). For example, we want
-to see SNPs as what they are - single-base variants - not as a nested region (as in
-Figure {@fig:refbias}).
-
-As mentioned, we handle these cases implicitly in `pandora`, however, the aim of this
-chapter and the next, in addition to comparing across technologies, will also be to
-compare methods for gaining drug resistance and epidemiological clustering information.
-To be able to compare with other methods though, we will need to be able to compare
-variants called with respect to a single-reference by other tools, with those from
-`pandora`.
-
-With that in mind, this section will focus on producing a distance matrix for all
-samples using the result of the `pandora compare` routine and contrast this to those
-obtained from the single-reference methods.
-
 #### Reproducing "truth" Illumina transmission clusters
 
 In this section we will examine how well we can recreate the transmission clusters
@@ -495,9 +441,7 @@ clusters.
 
 ---
 
-All of the analysis in this chapter was performed by myself - with the exception of the
-running of COMPASS - and all of the pipelines can be found at
-<https://github.com/mbhall88/head_to_head_pipeline>.
+All of the analysis in this chapter was performed by myself.
 
 #### Outstanding work
 
@@ -518,9 +462,7 @@ quick process.
 The genetic basis for drug resistance in Mtb is only partially understood. For the four
 first-line drugs, it is possible to detect the majority of resistant strains with high
 confidence [@doi:10/d9kj], but for second-line, novel, and repurposed drugs, this is
-much harder.
-
-Previous work from our group has shown that using WGS it is possible to create a panel
+much harder. Previous work from our group has shown that using WGS it is possible to create a panel
 of resistance markers and then successfully use this panel to predict drug resistance
 from Mtb sequence data [@doi:10/f755tg; @doi:10/f3jjtq]. This work involved the
 development of a software program called `mykrobe` to automate this inference and can
@@ -549,7 +491,7 @@ have shown that the primary factor determining how well a tool performed was the
 catalogue of resistance mutations used. However, given the same panel, different tools
 do not perform identically, and therefore methodology is still important. While some
 studies have focused specifically on Nanopore data, all used a small sample size
-(Votintseva *et al.* 2017 n=5, Hunt *et al.* 2019 n=5, `tb-profiler` 2019 n=3).
+(`mykrobe` n=5 and `tb-profiler` n=3).
 Additionally, `tb-profiler` and `mykrobe` both have limitations with their methods. Both
 `tb-profiler` and `mykrobe` only genotype with respect to known variants - i.e. they
 cannot detect novel variants. The CRyPTIC consortium recently introduced a new approach
@@ -622,10 +564,7 @@ these genomes using synteny and parsimony with existing gene identifiers.
 
 Ultimately, the overall gene ordering is not of great importance for the construction of
 a `pandora`-friendly pan-genome. The design of `pandora` is such that we divide the
-pan-genome into discrete pieces (loci) - i.e. genes and intergenic regions. Due to the
-low nucleotide diversity of Mtb, it may end up being necessary to split the Mtb genome
-into synteny blocks rather than the standard gene/intergenic approach we have used for
-other bacteria.
+pan-genome into discrete pieces (loci) - i.e. genes and intergenic regions.
 
 #### A genome graph map of *pe/ppe* genes
 
