--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -15,7 +15,7 @@
   and
   [Chapter 3](./20.partA.md#chapter-3-applications-to-improving-m-tuberculosis-drug-resistance-prediction)
   will also be contained in a paper, of which I will be the first author. We aim to have
-  this work completed and a manuscript submitted by the end of November 2020 - or the
+  this work completed and a manuscript submitted by the end of March 2021 - or the
   first quarter of 2021 at the latest.
 - The work in
   [Chapter 4](./20.partA.md#chapter-4-construction-of-a-m-tuberculosis-reference-pan-genome)
@@ -38,9 +38,9 @@ am also involved in the following publications:
   species-specific Nanopore basecalling models. I used the data we have good PacBio
   assemblies for to try and train a Mtb-specific basecalling model, as it has been
   previously shown (in *K. pneumoniae*) [@doi:10.1186/s13059-019-1727-y] that this can
-  improve read and consensus accuracy. This attempt did not yield a more accurate model
-  than the default, but we think it is important to make this result available and
-  challenge others to do the same for their species-of-interest.
+  improve read and consensus accuracy. We will show the improvement such species-specific 
+  models can have by re-analysing the chapter 2 work with this new Mtb model and challenging 
+  others to do the same for their species-of-interest.
 - I am a co-author on a new manuscript for the workflow management system `snakemake`
   [@doi:10.1093/bioinformatics/bts480]. The manuscript is in the process of being
   submitted to *Nature Communications*. I contributed to this work by co-developing a
@@ -70,24 +70,27 @@ The writing I have done includes:
 I plan to continue writing the results and methods for Chapter 2 and 3 in parallel with
 the daily work I am doing. As the work in these chapters will be published together (see
 [Publication Strategy](#publication-strategy)) I hope to have completed a well-polished
-draft for them both by the end of the year.
+draft for them both by March 2021.
 
 As a lot of the work in Chapters 2 and 3 leverage (and improve) the methods in Chapter
 1, I will revisit this chapter once the work in these two chapters is complete. By this
 point, the `pandora` paper will be submitted, as will the paper for Chapter 2 and 3.
 This will allow me to write a "finalised" methods and results section for Chapter 1. As
-such, I plan to take some time at the start of next year (2021) to work solely on
-getting Chapter 1 to a near-finished state.
+such, I plan to have Chapter 1 finished by April 2021.
 
-Chapter 4 will be approached in a similar manner to Chapters 2 and 3 - writing methods
-and results in parallel with the work I am doing. This means I will hope to have this
-chapter in a near-complete state, regardless of whether I "finish" the project before
-when I need to submit.
+Chapter 4 is a particular goal of mine and something I would like to continue pursuing 
+throughout my career. I won't have time to complete a *full* analysis in 6 months, but 
+as I have most of the data and methods in place, I will be able to get a solid first draft 
+done by October 2021.
 
 Lastly, I will work on the introductory chapter. I prefer to do this once I have a clear
 picture of all of the topics touched on in the body of the work.
 
-I plan to submit (pending a six-month extension) my thesis in October 2021.
+In summary, my current contract end date of 11/04/2020 is a bit earlier than I can realistically 
+have Chapters 2 & 3 complete. Additionally, I would also need to finish writing Chapter 1 
+and the introductory component of the thesis in that same time period. Ultimately I would 
+find a 6-month extension incredibly valuable and could produce complete versions of 
+chapters 1-3 and a good draft for chapter 4 and submit by October 2021.
 
 ### List of scientific courses and conferences attended to date and planned for next year
 
@@ -141,15 +144,14 @@ apply for within the next year or two:
 
 #### What do you see as your strengths (2-3 skills)?
 
-- Nanopore bioinformatics method development and analysis
-- Bacterial variant-calling evaluation
-- Software engineering
+- Rigour (fueled by healthy scepticism)
+- Methodical and careful working practises. I believe the fastest way to do something is the correct way - no "hacks" or shortcuts.
+- Great interest in both biology and bioinformatics without "worshipping" one over the other.
 
 #### What do you see as your areas for improvement (2-3 areas)?
 
-- Structural organisation of the Mtb genome
-- Phylogenetics
 - Writing and reviewing academic publications
+- Saying "no" to things. I have a tendancy to over commit myself
 
 #### What are your career development priorities until the end of your contract?
 
@@ -159,6 +161,7 @@ apply for within the next year or two:
 - Reviewing and writing papers will be a valuable set of skills for applying to
   postdoctoral fellowships and is something that can fit into the completion of my PhD
   nicely.
+- Get better at saying "no" to certain things.
 
 #### What actions will you take to develop these skills?
 
@@ -175,6 +178,9 @@ apply for within the next year or two:
   position.
 - I have registered for the EMBL "Applying to postdoc positions" workshop (late-October)
   and am also waiting for the next "Grant Writing" workshop to become available.
+- Given I have a tight schedule for submission, that will really help me with learning to 
+get comfortable with saying "no" to opportunities that are not directly relevant or helpful 
+to getting my thesis done.
 
 [app-note]: https://academic.oup.com/bioinformatics/pages/instructions_for_authors#Types%20of%20Manuscript
 [bielefeld]: https://www.uni-bielefeld.de/(en)/ZiF/AG/2019/09-30-Stoye.html
